--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "prettier": "^3.3.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cros": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.1"
